--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,16 @@
 .scrollbar-hide::-webkit-scrollbar {
 	display: none; /* Chrome, Safari, Opera */
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+
+.hide-scrollbar {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
